--- a/package.json
+++ b/package.json
@@ -8,20 +8,29 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-scripts": "5.0.1",
+    "react-router": "^6.26.2",
+    "react-router-dom": "^6.27.0",
+    "react-scripts": "^5.0.1",
+    "styled-components": "6.1.13",
     "web-vitals": "^2.1.4"
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.13.0",
+    "cypress": "13.14.2",
+    "eslint": "^8.57.1",
+    "eslint-plugin-react": "^7.37.2",
+    "globals": "^15.11.0",
+    "lint-staged": "15.2.10",
+    "prettier": "3.3.3",
+    "storybook": "8.3.0",
+    "webpack": "^5.95.0",
+    "webpack-cli": "^5.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
   },
   "browserslist": {
     "production": [
