--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "cypress": "13.14.2",
     "eslint": "^8.57.1",
     "eslint-plugin-react": "^7.37.2",
+    "gh-pages": "^6.2.0",
     "globals": "^15.11.0",
     "lint-staged": "15.2.10",
     "prettier": "3.3.3",
@@ -27,11 +28,14 @@
     "webpack": "^5.95.0",
     "webpack-cli": "^5.1.4"
   },
+  "homepage": "https://pmlll.github.io/shl4488/",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "browserslist": {
     "production": [
